Suministrar paquetes de EF

--- a/FondosBackSolucion/Fondos.Infrastructure/Fondos.Infrastructure.csproj
+++ b/FondosBackSolucion/Fondos.Infrastructure/Fondos.Infrastructure.csproj
@@ -7,11 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fondos.Application\Fondos.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Context\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fondos.Application\Fondos.Application.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.10" />
   </ItemGroup>
 
 </Project>
